Moloch_template.yaml
AWSTemplateFormatVersion: "2010-09-09"
#Parameters:
#  VPCid:
#    Description: 'VPC ID'
#    Type: "AWS::EC2::VPC::Id"
#  Subnetid:
#    Description: 'Subnet ID'
#    Type: "AWS::EC2::Subnet::Id"
#  Securitygroupid:
#    Description: 'Security Group ID'
#    Type: "AWS::EC2::SecurityGroup::Id"
#  myKeyPair:
#    Description: 'Amazon EC2 Key Pair'
#    Type: "AWS::EC2::KeyPair::KeyName"
Parameters:

  myKeyPair:
    Type: AWS::EC2::KeyPair::KeyName
    Description: Name of an existing EC2 KeyPair to enable SSH access to the ECS instances.
  VPCid:
    Type: AWS::EC2::VPC::Id
    Description: Select the VPC to install into.
  Subnetid:
    Type: List<AWS::EC2::Subnet::Id>
    Description: Select at least one subnet in your selected VPC, it should have internet access provisioned via an Internet gateway. For a high availability configuration select two or more subnets in another availability zone.
  CIDR:
    Type: String
    Description: The CIDR notation of address to access this tool
    Default: '0.0.0.0/0'
  DesiredInstances:
    Description: 'The number of EC2 instances'
    Type: Number
    Default: 2
  MaxSize:
    Type: Number
    Default: '6'
    Description: Maximum number of instances that can be launched in your tool cluster.
  InstanceType:
    Description: EC2 instance type
    Type: String
    Default: t3.xlarge
    AllowedValues: [t3.xlarge, t3.2xlarge, m5.xlarge, m5.2xlarge,
      m5.4xlarge, m5.12xlarge, m5.24xlarge, c5.xlarge, c5.2xlarge, c5.4xlarge,
      c5.8xlarge, r5.xlarge, r5.2xlarge, r5.4xlarge, r5.12xlarge,
      r5.24xlarge, i3.xlarge, i3.2xlarge, i3.4xlarge, i3.8xlarge, i3.16xlarge]
    ConstraintDescription: Please choose a valid instance type.
  CustomAMI:
    Description: AMI ID -- Change if custom AMI is desired
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: "Network Configuration"
        Parameters:
          - VPCid
          - Subnetid
          - CIDR
      - Label:
          default: "Autoscaling Configuration"
        Parameters:
          - myKeyPair
          - InstanceType
          - CustomAMI
          - DesiredInstances
          - MaxSize
    ParameterLabels:
      VPC:
        default: "Which VPC should this be deployed to?"

Conditions:
  HasKeyName: !Not [!Equals [!Ref myKeyPair, '']]

Resources:
  # Security Groups

  # The Security Group placed on the tools themselves
  ToolSecurityGroup:
    Type: AWS::EC2::SecurityGroup
#    DependsOn: NubevaIAMRole  # Ensure IAMRole is deleted last
    Properties:
      GroupDescription: Tool Security Group
      VpcId: !Ref 'VPCid'
  # Inbound- allow ssh
  SecurityGroupSSHinbound:
    Type: AWS::EC2::SecurityGroupIngress
#    DependsOn: NubevaIAMRole  # Ensure IAMRole is deleted last
    Properties:
      GroupId: !Ref "ToolSecurityGroup"
      IpProtocol: tcp
      FromPort: '22'
      ToPort: '22'
      CidrIp: !Ref "CIDR"
  # Inbound- allow VXLAN
  ToolSecurityGroupVXLANinbound:
    Type: AWS::EC2::SecurityGroupIngress
#    DependsOn: NubevaIAMRole  # Ensure IAMRole is deleted last
    Properties:
      GroupId: !Ref "ToolSecurityGroup"
      # This needs a lambda function to call: https://github.com/stelligent/cloudformation-custom-resources/tree/master/lambda
      CidrIp: !Ref "CIDR"
      IpProtocol: udp
      FromPort: '4789'
      ToPort: '4789'
  # Inbound- allow moloch
  ToolSecurityGroupntopinbound:
    Type: AWS::EC2::SecurityGroupIngress
#    DependsOn: NubevaIAMRole  # Ensure IAMRole is deleted last
    Properties:
      GroupId: !Ref "ToolSecurityGroup"
      IpProtocol: tcp
      FromPort: '8005'
      ToPort: '8005'
      CidrIp: !Ref "CIDR"
  # Outbound- allow all
  ToolSecurityGroupOutbound:
    Type: AWS::EC2::SecurityGroupEgress
#    DependsOn: NubevaIAMRole  # Ensure IAMRole is deleted last
    Properties:
      GroupId: !Ref "ToolSecurityGroup"
      CidrIp: 0.0.0.0/0
      IpProtocol: "-1"
      FromPort: '-1'
      ToPort: '-1'

  InstanceProfile:
    Type: 'AWS::IAM::InstanceProfile'
    Properties:
      Path: '/'
      Roles:
      - !Ref IAMRole

  IAMRole:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
        - Effect: Allow
          Principal:
            Service:
            - 'ec2.amazonaws.com'
          Action:
          - 'sts:AssumeRole'
      Path: '/'
      Policies:
      - PolicyName: asg
        PolicyDocument:
          Version: '2012-10-17'
          Statement:
          - Effect: Allow
            Action:
            - 'autoscaling:DescribeAutoScalingGroups'
            - 'autoscaling:DescribeAutoScalingInstances'
            - 'ec2:DescribeInstances'
            Resource:
            - '*'

  AutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      # AvailabilityZones: !Ref AvailabilityZones
      VPCZoneIdentifier:  !Ref Subnetid
      LaunchConfigurationName: !Ref LaunchConfiguration
      MinSize: 0
      MaxSize: !Ref 'MaxSize'
      DesiredCapacity: !Ref 'DesiredInstances'
      MetricsCollection:
      - Granularity: 1Minute
        Metrics:
        - GroupInServiceInstances
      Tags:
      - Key: Name
        Value: !Sub ${AWS::StackName}
        PropagateAtLaunch: 'true'
    CreationPolicy:
      ResourceSignal:
        Count: 0
        Timeout: PT5M
    UpdatePolicy:
      AutoScalingRollingUpdate:
        MinInstancesInService: !Ref DesiredInstances
        MaxBatchSize: '1'
        PauseTime: PT5M
        SuspendProcesses:
        - AlarmNotification
        WaitOnResourceSignals: 'true'

  LaunchConfiguration:
    Type: AWS::AutoScaling::LaunchConfiguration
    Metadata:
      AWS::CloudFormation::Init:
        configSets:
          # List the configSets and the config keys they contain:
          Configure:
            - "configVxlan"
            - "configStartup"
          Install:
            - "installElasticsearch"
            - "installServices"
            - "installMoloch"
          Start:
            - "startMoloch"

        # Config key: configvxlan
        configVxlan:
          commands:
            01_interface:
              command: "ip link add vxlan555 type vxlan id 555 remote 0.0.0.0 dstport 4789"
            02_bringup:
              command: "ip link set vxlan555 up"

        # Config key: configstartup
        configStartup:
          commands:
            01_addintrclocal:
              command: "echo 'ip link add vxlan555 type vxlan id 555 remote 0.0.0.0 dstport 4789' >> /etc/rc.local"
            02_adduprclocal:
              command: "echo 'ip link set up dev vxlan555' >> /etc/rc.local"
            03_chmod:
              command: "chmod +x /etc/rc.d/rc.local"

        # Config key: installElasticsearch
        installElasticsearch:
          commands:
            01_setES_pubkeys:
              command: "rpm --import https://artifacts.elastic.co/GPG-KEY-elasticsearch"
            02_get_repo_info:
              command: "wget -nv https://raw.githubusercontent.com/nubevalabs/templates/master/elastic.repo -O /etc/yum.repos.d/elastic.repo"

        # Config key: installServices
        installServices:
          packages:
            yum:
              perl-JSON: []
              perl-libwww-perl: []
              libyaml-devel: []
              java-1.8.0-openjdk: []
              wget: []
              elasticsearch: []
          services:
            sysvinit:
              elasticsearch:
                enabled: true
                ensureRunning: true




        # Config key: installMoloch
        installMoloch:
          commands:
            01_wget:
              command: "wget -nv https://files.molo.ch/moloch-master.centos7.x86_64.rpm -O /tmp/moloch-master.centos7.x86_64.rpm"
            02_install:
              command: "rpm -Uvh /tmp/moloch-master.centos7.x86_64.rpm"
            03_installconfig:
              command: "wget -nv https://raw.githubusercontent.com/nubevalabs/templates/master/mastermolochconfig.ini -O /data/moloch/etc/config.ini"
            04_installStartScript:
              command: "wget -nv https://raw.githubusercontent.com/nubevalabs/templates/master/start_moloch.sh -O /data/moloch/start_moloch.sh"
            05_allowExecute:
              command: "chmod +x /data/moloch/start_moloch.sh"
            06_forceSleep:
              command: "sleep 60"
            07_setupNewDB:
              command: "/data/moloch/db/db.pl http://localhost:9200 init"
            08_createAdmin:
              command: "/data/moloch/bin/moloch_add_user.sh admin \"admin user\" G0Nub3va20[] --admin"
            09_setupMolochGeoIP:
              command: "/data/moloch/bin/moloch_update_geo.sh"
            10_setupMolochLogs:
              command: "mkdir /data/moloch/logs"
            11_setupMolochLogs:
              command: "mkdir /data/moloch/raw"
            12_cleanup:
              command: "rm /tmp/moloch-master.centos7.x86_64.rpm"

        # Config key: startMoloch
        startMoloch:
          commands:
            01_addsleeprclocal:
              command: "echo 'sleep 60' >> /etc/rc.local"
            02_addMolochrclocal:
              command: "echo '/data/moloch/start_moloch.sh' >> /etc/rc.local"
            03_startMoloch:
              command: "/data/moloch/start_moloch.sh"


    Properties:
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash -xe
          yum install -y https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
          yum update -y
          yum update -y aws-cfn-bootstrap
          # how do I get correct region variable
          /opt/aws/bin/cfn-init -v --region ${AWS::Region} --stack ${AWS::StackName} --resource LaunchConfiguration --configsets Configure,Install,Start
          # don't know how to get a signal # has something to do with minnimums on autoscale-0 works, 1 doesn't
          /opt/aws/bin/cfn-signal -e $? --region ${AWS::Region} --stack ${AWS::StackName} --resource AutoScalingGroup
      InstanceType: !Ref InstanceType
      ImageId: !Ref CustomAMI
      SecurityGroups:
      - !Ref "ToolSecurityGroup"
      IamInstanceProfile: !Ref InstanceProfile
      KeyName:
        Ref: myKeyPair
      #NetworkInterfaces:
      AssociatePublicIpAddress: "true"
      #    DeviceIndex: "0"
      #    SecurityGroups:
      #     - !Ref "ToolSecurityGroup"
      #GroupSet:
      #    SubnetId:
      #      Ref: Subnetid


#Outputs:
#  URL:
#    Description: "The URL of this instance's Moloch Dashboard"
#    Value: !Sub "http://${MyServerInstance.PublicIp}:8005"
#  URL2:
#    Description: "Point VXLan 111 trafic to:"
#    Value: !Sub "${MyServerInstance.PrivateIp}"
